# bevy-fight-game-research

./: Cargo.toml  LICENSE  README.md  hitbox_settings.json  hurtbox_settings.json
assets/: sprite_sheets.json
src/: main.rs
src/core/: core.rs  core_core.rs  core_gui.rs  mod.rs
src/editor/: editor.rs  editor_core.rs  editor_gui.rs  editor_sprite_sheet.rs  mod.rs
src/editor/inspector/: inspector_core.rs  mod.rs
src/game/: game_core.rs  game_gui.rs  mod.rs
