[package]
name = "bevy-fighting-research"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_egui = "0.27"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
