[package]
name = "bevy-fighting-research"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_egui = "0.27"
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
image = { version = "0.25.1", features = ["jpeg", "png"] } # Add the types you want support for
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
